--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rony protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
-    
+
 
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="jam">
+            <h1>well come to</h1>
+            <h2><span class="orange-color">Rony hasan</span> world!</h2>
+            <h3>Building climber and train stopper</h3>
+            <p>Hi i am Rony hasan.i am a student of cse in world university.I can create genareal website.i am
+                banlgladeshi.i live in dhaka.I coming from barishal.so if you can any website.I am ready to your
+                work.thank
+                you</p>
+            <a class="link-button" target=" _blank" href="https://www.linkedin.com/feed/?trk=nav_back_to_linkedin">HIRE
+                ME</a>
+
+        </div>
+        <div class="jam"><img src="nazrul.png" alt=""></div>
+    </section>
+
+
 </body>
+
 </html>
