--- a/index.html
+++ b/index.html
@@ -31,6 +31,41 @@
         </div>
         <div class="jam"><img src="nazrul.png" alt=""></div>
     </section>
+    <section class="dream-big">
+        <div class="jam">
+            <img src="nazrul2.png" alt="">
+
+
+        </div>
+
+        <div class="jam">
+            <h1> Dream Big</h1>
+            <h2> Become a Web developer</h2>
+            <p>I already learn basic html & css.I can creat simple website.I can basic work.I happy because am a
+                developer.so you can give your work.</p>
+            <a class="link-button" target=" _blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+
+
+
+
+
+
+    </section>
+    <section>
+
+        <div>
+
+
+
+        </div>
+
+
+
+
+
+    </section>
 
 
 </body>
