--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="jam">
             <h1>well come to</h1>
             <h2><span class="orange-color">Rony hasan</span> world!</h2>
@@ -31,7 +31,7 @@
         </div>
         <div class="jam"><img src="nazrul.png" alt=""></div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="jam">
             <img src="nazrul2.png" alt="">
 
@@ -53,14 +53,26 @@
 
 
     </section>
-    <section>
-
-        <div>
+    <section class="Exprience">
 
 
+        <h1>Expriences</h1>
+        <div class="flexible-container">
+            <div id="fusca" class="kathal">
+                <h2>FUll Stack Web Developer</h2>
+                <h3 class="orange-color">2021-present | pro Lebel Developer</h3>
+                <p>I already learn basic html & css.I can creat simple website.I can basic work.I happy because am a
+                    developer.so you can give your work.</p>
 
+            </div>
+            <div id="cotpoti" class="kathal">
+                <h2>Baby Web Develope</h2>
+                <h3 class="orange-color">2020-2021 | programming Hero</h3>
+                <p>I already learn basic html & css.I can creat simple website.I can basic work.I happy because am a
+                    developer.so you can give your work.</p>
+
+            </div>
         </div>
-
 
 
 
